// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emotion primitives custom shouldForwardProp works 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  onClick={[Function]}
  style={
    Object {
      "color": "rgba(255,105,180,1.00)",
    }
  }
>
  Emotion
</div>
`;

exports[`Emotion primitives primitive should work with \`withComponent\` 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  onClick={[Function]}
  style={
    Object {
      "color": "rgba(255,105,180,1.00)",
    }
  }
>
  Mike
</div>
`;

exports[`Emotion primitives should pass props in withComponent 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "backgroundColor": "rgba(0,128,0,1.00)",
    }
  }
/>
`;

exports[`Emotion primitives should pass props in withComponent 2`] = `
<div
  className="css-text-901oao"
  dir="auto"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255,105,180,1.00)",
    }
  }
/>
`;

exports[`Emotion primitives should render <Image /> 1`] = `
<div
  className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
  style={
    Object {
      "borderBottomColor": "rgba(255,105,180,1.00)",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "2px",
      "borderLeftColor": "rgba(255,105,180,1.00)",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "2px",
      "borderRightColor": "rgba(255,105,180,1.00)",
      "borderRightStyle": "solid",
      "borderRightWidth": "2px",
      "borderTopColor": "rgba(255,105,180,1.00)",
      "borderTopStyle": "solid",
      "borderTopWidth": "2px",
    }
  }
>
  <div
    className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
  />
</div>
`;

exports[`Emotion primitives should render primitive with style prop 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  onClick={[Function]}
  style={
    Object {
      "color": "rgba(255,105,180,1.00)",
      "paddingBottom": "10px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "10px",
    }
  }
>
  Emotion primitives
</div>
`;

exports[`Emotion primitives should render the primitive on changing the props 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  onClick={[Function]}
  style={
    Object {
      "color": "rgba(255,105,180,1.00)",
      "paddingBottom": "20px",
      "paddingLeft": "20px",
      "paddingRight": "20px",
      "paddingTop": "20px",
    }
  }
>
  Emotion Primitives
</div>
`;

exports[`Emotion primitives should render the primitive when styles applied using object style notation 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255,0,0,1.00)",
      "color": "rgba(255,0,0,1.00)",
      "fontSize": "40px",
    }
  }
>
  Emotion Primitives
</div>
`;

exports[`Emotion primitives should style any other component 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  onClick={[Function]}
  style={
    Object {
      "color": "rgba(255,105,180,1.00)",
    }
  }
>
  Hello World
</div>
`;

exports[`Emotion primitives should unmount with theming 1`] = `
<div>
  <div
    class="css-text-901oao"
    dir="auto"
    style="background-color: rgb(255, 255, 0); display: flex;"
  >
    Hello World
  </div>
</div>
`;

exports[`Emotion primitives should work with StyleSheet.create API 1`] = `
<div
  className="css-text-901oao r-color-howw7u"
  dir="auto"
  onClick={[Function]}
  style={
    Object {
      "fontSize": "10px",
    }
  }
>
  Emotion Primitives
</div>
`;

exports[`Emotion primitives should work with theming from @emotion/react 1`] = `
<div
  className="css-text-901oao"
  dir="auto"
  onClick={[Function]}
  style={
    Object {
      "color": "rgba(255,0,255,1.00)",
    }
  }
>
  Hello World
</div>
`;
